# chess-rs

./: Cargo.toml
.cargo/: config.toml.orig
examples/: raw_lib_example.rs
include/: chessrs.h
src/: chess.rs  field.rs  figure.rs  lib.rs  main.rs  selection.rs  valid_moves.rs
src/special_moves/: en_passant.rs  mod.rs  promoting.rs  rochade.rs
