[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
#macroquad = { version="0.3.25", default-features=false }
#macroquad = { path = "../forks/macroquad", default-features=false }
macroquad = { git = "https://github.com/elftausend/macroquad", default-features=false }
once_cell = "1.17.1"
tokio = { version = "1.28.0", features = ["full"] }
